# deepRL_5iabd

./: .env.example  .gitignore  README.md  commandes_utiles.txt  dqn_no_replay_GridWorldEnv.pkl  dqn_no_replay_LineWorldEnv.pkl  dqn_no_replay_QuartoEnv.pkl  dqn_no_replay_TicTacToeEnv.pkl  experimentation_logs.dvc  nano.6385.save  pyproject.toml  q_learning_GridWorldEnv.pkl  q_learning_LineWorldEnv.pkl  q_learning_TicTacToeEnv.pkl  reinforce_GridWorldEnv.pkl  reinforce_LineWorldEnv.pkl  reinforce_QuartoEnv.pkl  reinforce_TicTacToeEnv.pkl  reinforce_baseline_True_GridWorldEnv.pkl  reinforce_baseline_True_LineWorldEnv.pkl  reinforce_baseline_True_QuartoEnv.pkl  reinforce_baseline_True_TicTacToeEnv.pkl  reinforce_quarto.pkl  reinforce_tictactoe.pkl
cpplib/: main.cpp  makefile
experimentation_logs/: q_learning_gridworld.pkl  q_learning_tictactoe.pkl  reinforce_critic_grid_world.pkl  reinforce_critic_line_world.pkl  reinforce_critic_quarto.pkl  reinforce_critic_tictactoe.pkl  reinforce_gridworld.pkl  reinforce_line_world.pkl  reinforce_lineworld.pkl  reinforce_mean_baseline_grid_world.pkl  reinforce_mean_baseline_line_world.pkl  reinforce_mean_baseline_quarto.pkl  reinforce_mean_baseline_tictactoe.pkl  reinforce_quarto.pkl  reinforce_tictactoe.pkl
experimentation_logs/mes_analyses/: analyse.md
experimentation_logs/models/: test.pth
runs/Feb24_20-07-12_debian/: events.out.tfevents.1771960032.debian.11490.0
runs/Feb24_20-08-01_debian/: events.out.tfevents.1771960081.debian.11849.0
runs/Feb24_21-54-48_debian/: events.out.tfevents.1771966488.debian.6907.0
runs/Feb24_21-55-15_debian/: events.out.tfevents.1771966515.debian.7132.0
src/deeprl_5iabd/: config.py  helper.py  main.py
src/envs/: base_env.py  line_world.py  quarto.py
src/mypythonlib/: config.py  helper.py  main.py
tests/: conftest.py
tests/integration/: test_random_vs_random_quarto.py  test_reinforce_line_world.py
tests/unit/: test_grid_world.py  test_helper.py  test_line_world.py  test_quarto_env.py  test_softmax_with_mask.py  test_tictactoe.py
(+59 files in other folders)
