[project]
name = "mypythonlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.10.0",
    "numpy>=2.4.2",
    "pydantic-settings>=2.13.1",
    "pygame>=2.6.1",
    "setuptools==41.0.0",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mypythonlib"]

dependencies = [
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pygame>=2.6.1",
]
